# dude-dilligence

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py  visualize_agents.py
app/: README.md  __init__.py  main.py  ui.py
dude_diligence/: README.md  __init__.py  agents.py  models.py  pyproject.toml
dude_diligence/specs/: README.md
dude_diligence/tools/: README.md  __init__.py  companies_house.py  linkedin.py  web_search.py
dude_diligence/utils/: README.md  __init__.py  companies_house_utils.py  model.py  parsers.py  prompts.py  tracing.py
examples/: README.md  multi_agent_example.py  tracing_example.py
notebooks/: companies_house.ipynb
