[project]
name = "dude-diligence"
version = "0.1.0"
description = "AI-powered due diligence tool using LLM agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "tenacity>=8.2.3",
    "loguru>=0.7.0",
    "smolagents>=1.15.0",
]